# Arbiter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
arbiter/agents/: agent.py
arbiter/context/: api.py
arbiter/diagnostics/: anomaly.py
arbiter/routing/: engine.py  model.py
arcpoint/: __init__.py
arcpoint/agents/: agent.py  context_api.py
arcpoint/context/: api.py  schemas.py
arcpoint/diagnostics/: chaos.py
arcpoint/feedback/: loop.py
arcpoint/observability/: dashboard.py
arcpoint/routing/: engine.py
data/: generate.py
docs/: arcpoint-system-architecture.drawio
tests/: __init__.py  test_agents.py  test_chaos.py  test_context_api.py  test_diagnostics.py  test_feedback.py  test_integration.py  test_routing.py  test_smoke.py
