[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "1.0.0"
description = "Intelligent request router combining ML-based latency prediction, real-time feedback loops, drift/anomaly detection, and agentic reasoning"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["routing", "ml", "latency-prediction", "context-engine", "feedback-loops", "drift-detection"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Repository = "https://github.com/arbiter/arbiter"

[tool.setuptools]
packages = ["arbiter", "data", "tests"]

[tool.uv]
package = true

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --strict-config --tb=short --cov=arbiter --cov=data --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["arbiter", "data"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
# E501: line length handled by ruff formatter
# N806: ML convention uses uppercase X for feature matrices (sklearn standard)
# F841: unused variables in tests are intentional scaffolding
ignore = ["E501", "N806", "F841", "W291"]

[tool.ruff.lint.isort]
known-first-party = ["arbiter"]
